--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -24,12 +24,10 @@
 /* header */
 header{
     background-color: var(--azul);
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
 }
 
 .logo img{
-    width: 150px;
+    width: 100px;
     padding: 5px 0;
 }
 
@@ -55,15 +53,19 @@ nav ul li a{
     color: white;
     text-decoration: none;
     margin: 0 30px;
-    font-size: 40px;
+    font-size: 20px;
     text-transform: uppercase;
 }
 /* fim do header */
 
+h1{
+    font-size: 40px;
+}
+
 h2{
     text-align: left;
     margin: 10px 0 0 8%;
-
+    font-size: 32px;
     
 }
 .campo{
@@ -87,17 +89,18 @@ h2{
     width: 80%;
     margin-top:15px  ; 
     background: #D3E1ED; 
-    height: 40px;
+    height: 60px;
     border: #D3E1ED;
     border-bottom-right-radius: 16px;
     border-top-right-radius: 16px;
     outline: 0; 
+    font-size: 19px;
 }
 
 .img{
     position: relative;
-    top: 15px;
-    height: 40px;
+    top: 23px;
+    height: 60px;
     width: 10%;
     background: #D3E1ED;
     padding: 12px;
@@ -116,14 +119,17 @@ h2{
     
 }
 .enviar{
+    max-width: 500px;
+    width: 100%;
+    padding: 10px;
+    display: block;
     background: #006BC1;
     color: white;
-    margin-top: 3%;
+    margin: 3% 2%;
     border-radius: 15px;
-    width: 20%;
-    height: 35px;
     border: 1px solid #006BC1;
     cursor: pointer;
+    font-size: 20px;
 }
 
 .enviar:hover{
