--- a/css/mobile.css
+++ b/css/mobile.css
@@ -5,12 +5,13 @@
 
     .mobile-menu ul{
         width: 100%;
-        background-color: white;
+        background-color: #4786B7;
         position: absolute;
-        top: 145px;
-        left: 0;
+        top: 103px;
+        right: 0;
         text-align: center;
         display: none;
+        width: 40%;
     }
 
     .mobile-menu ul li{
@@ -19,24 +20,27 @@
     }
 
     .mobile-menu ul li a{
-        color: black;
+        color: white;
         display: block;
-        font-size: 30px;
+        font-size: 20px;
         padding: 10px 0;
-        width: 100%;
         margin: 0;
         transition: 0.5s;
+        text-align: center;
+        margin-right: 10px;
     }
 
     .mobile-menu ul li a:hover{
-        background-color: #ccc;
+        text-decoration: underline 2px;
+
     }
 
     .mobile-menu i{
         position: relative;
-        font-size: 50px;
-        left: 20px;
+        font-size: 30px;
+        left: -20px;
         cursor: pointer;
+        color: white;
     }
 
 
