--- a/css/login.css
+++ b/css/login.css
@@ -28,8 +28,18 @@ header{
 }
 
 .logo img{
-    width: 100px;
-    padding: 5px 0;
+    width: 80px;
+    padding: 10px 0;
+}
+
+.wraper-ul{
+    margin-top: 150px;
+}
+
+#menu-d{
+    position: absolute;
+    right: -350px;
+    top: 40px;
 }
 
 header .container{
@@ -56,7 +66,16 @@ nav ul li a{
     margin: 0 30px;
     font-size: 20px;
     text-transform: uppercase;
+    transition: 0.5s;
 }
+
+
+nav ul li a:hover{
+    text-decoration: underline 2px;
+    transform: scale(1.1);
+    display: inline-block;
+}
+
 /* fim do header */
 
 #login{
