--- a/css/mobile.css
+++ b/css/mobile.css
@@ -4,14 +4,14 @@
     }
 
     .mobile-menu ul{
-        width: 100%;
+        width: 60%;
         background-color: #4786B7;
-        position: absolute;
-        top: 103px;
-        right: 0;
+        top: 0;
+        right: -446px;
         text-align: center;
-        display: none;
-        width: 40%;
+        height: 100vh;
+        z-index: 1;
+        position: fixed;
     }
 
     .mobile-menu ul li{
@@ -27,7 +27,6 @@
         margin: 0;
         transition: 0.5s;
         text-align: center;
-        margin-right: 10px;
     }
 
     .mobile-menu ul li a:hover{
@@ -61,6 +60,12 @@
     .banner .container p{
         width: 100%;
     }
+    
+      .card-sobre{
+        width: 100%;
+        margin-bottom: 20px;
+      }
+    
 
     
 }
